--- a/src/app/pages/public/register/register.page.html
+++ b/src/app/pages/public/register/register.page.html
@@ -5,7 +5,7 @@
 <div class="bg-color">
   <!-- header title -->
   <div class="title">
-    <label class="title-text"> ENVIA MEJOR</label>
+    <label class="title-text" id="registerTitle"> ENVIA MEJOR</label>
   </div>
   <!-- overall div -->
   <div class="row" style="overflow:auto;height:100%">
@@ -13,37 +13,37 @@
     <div class="column"></div>
     <!-- section 2 -->
     <div class="column" style="text-align:center;padding-top: 25px;">
-      <p class="verify">Set Up your Account</p>
+      <p class="verify" id="setUpAccount">Set Up your Account</p>
       <!-- form starts -->
       <form #registerForm="ngForm" name="registerForm" novalidate>
       <!-- for phone number input -->
-      <input type="text" numbersOnly id="phone" name="phone" class="form-control" placeholder="Phone Number" autocomplete="off"  required
+      <input type="text" numbersOnly id="registerPhone" name="phone" class="form-control" placeholder="Phone Number" autocomplete="off"  required
       [ngClass]="{
       'is-invalid':phone.invalid  && submitted  ,'is-valid': phone.valid  && submitted }" #phone="ngModel"
       ngModel [(ngModel)]="registrationObj.phone" />
-    <show-error [control]="phone" [label]="{'labelName': 'Phone Number'}" [submitFlag]="submitted"></show-error>
+    <show-error id="registerPhoneErr" [control]="phone" [label]="{'labelName': 'Phone Number'}" [submitFlag]="submitted"></show-error>
     <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1" *ngIf="!submitted || phone.valid"></svg>
     <form  class="digit-group" data-group-name="digits" data-autosubmit="false" autocomplete="off">
-        <input class="inputs" id="input1" type="text"   class="inputs"/>
-        <input class="inputs" id="input2" type="text"  class="inputs"/>
-        <input class="inputs" id="input3" type="text" class="inputs" />
-        <input class="inputs" id="input4" type="text"  class="inputs"/>
+        <input class="inputs" id="registerInput1" type="text"   class="inputs"/>
+        <input class="inputs" id="registerInput2" type="text"  class="inputs"/>
+        <input class="inputs" id="registerInput3" type="text" class="inputs" />
+        <input class="inputs" id="registerInput4" type="text"  class="inputs"/>
         <p *ngIf="invalidOTP" style="color: red;text-align: -webkit-match-parent ;font-family: raleway_regular, Arial;"  >
-          <span>Invalid OTP !</span>
+          <span id="registerInvalidOtp">Invalid OTP !</span>
         </p>
       </form>
     
-      <p class="pincode">Enter new pincode</p>
+      <p class="pincode" id="registerNewPin">Enter new pincode</p>
     <form  class="digit-group1" data-group-name="digits" data-autosubmit="false" autocomplete="off">
-        <input class="inputs1" type="text" id="inputConf1"  class="inputs1"/>
-        <input class="inputs1" type="text" id="inputConf2"  class="inputs1"/>
-        <input class="inputs1" type="text" id="inputConf3" class="inputs1" />
-        <input class="inputs1" type="text" id="inputConf4"  class="inputs1"/>
+        <input class="inputs1" type="text" id="registerInputConf1"  class="inputs1"/>
+        <input class="inputs1" type="text" id="registerInputConf2"  class="inputs1"/>
+        <input class="inputs1" type="text" id="registerInputConf3" class="inputs1" />
+        <input class="inputs1" type="text" id="registerInputConf4"  class="inputs1"/>
         <p *ngIf="invalidOTP" style="color: red;text-align: -webkit-match-parent ;font-family: raleway_regular, Arial;"  >
-          <span>Invalid OTP !</span>
+          <span id="registerInvalidOtpConf">Invalid OTP !</span>
         </p>
       </form>
-      <p class="pincode">Confirm pincode</p>
+      <p class="pincode"  id="registerConfPin">Confirm pincode</p>
 
          <!-- for new password input
         <input type="text" name="newPass" class="form-control" placeholder="New pincode" autocomplete="off"  required [ngClass]="{'is-invalid': 
@@ -56,7 +56,7 @@
         <show-error [control]="conPass" [label]="{'labelName': 'Confirm pincode'}" [submitFlag]="submitted"></show-error> -->
         <!-- <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"  *ngIf="!submitted || conPass.valid"></svg> --> 
         <!-- for submit button -->
-        <button id="submitBtn" (click)="onSubmit(registerForm)">Submit</button>
+        <button id="registerSubmitBtn" (click)="onSubmit(registerForm)">Submit</button>
       </form>
       <!-- end of form -->
       <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
