--- a/src/app/pages/public/home/home.page.html
+++ b/src/app/pages/public/home/home.page.html
@@ -35,20 +35,20 @@
  
             <div class="columnContainer" id="column" *ngIf="gridView" style="opacity:1">
                
-                <div class="imageContainer" style="background: url('assets/Polygon 12.png') center no-repeat;" > 
+                <div class="imageContainer" style="background: url('assets/Group 1.png') center no-repeat;" > 
                     <h4 class="eh4" style="cursor:pointer" (click)="sendMoney()">$</h4>
                     <label class="lab" style="cursor:pointer" (click)="sendMoney()">
                     New Transfer
                     </label>
                 </div>
-                <div class="imageContainer"  style="background: url('assets/Group 1.png') center no-repeat;">
-                    <h4 class="eh4" style="cursor:pointer" (click)="sendMoney()">ET</h4>
-                    <label class="lab" style="cursor:pointer" (click)="sendMoney()"> 
-                    Eric Thomson
+                <div class="imageContainer"  style="background: url('assets/Polygon 12.png') center no-repeat;"  *ngFor="let home of homeArr;let i=index">
+                    <h4 class="eh4" style="cursor:pointer" (click)="sendMoney(home.name)">{{getSplit(home.name)}}</h4>
+                    <label class="lab" style="cursor:pointer" (click)="sendMoney(home.name)"> 
+                    {{home.name}}
                     </label>
                 </div>
                 
-                <div class="imageContainer" style="background: url('assets/Group 3.png') center no-repeat;">
+                <!-- <div class="imageContainer" style="background: url('assets/Group 3.png') center no-repeat;">
                     <h4 class="eh4">W</h4>
                     <label class="lab">
                        Williams
@@ -89,22 +89,22 @@
                       <label class="lab">
                         Daniel
                         </label>
-                  </div>
+                  </div> -->
               </div>
             <div class="columnContainer" id="column" *ngIf="listView" style="float: left;">
-                <div class="imageContainerList" style="background: url('assets/Polygon 12.png')  no-repeat;" > 
+                <div class="imageContainerList" style="background: url('assets/Group 1.png')  no-repeat;" > 
                     <h4 class="eh41" style="cursor:pointer" (click)="sendMoney()">$</h4>
                     <label class="lab1" style="cursor:pointer" (click)="sendMoney()">
                     New Transfer
                     </label>
                 </div>
-                <div class="imageContainerList" style="background: url('assets/Group 1.png')  no-repeat;" > 
-                    <h4 class="eh41" style="cursor:pointer" (click)="sendMoney()">ET</h4>
-                    <label class="lab1" style="cursor:pointer" (click)="sendMoney()">
-                    Eric Thomson
+                <div class="imageContainerList" style="background: url('assets/Polygon 12.png') center no-repeat;"  style="background: url('assets/Polygon 12.png')  no-repeat;" *ngFor="let home of homeArr;let i=index" > 
+                    <h4 class="eh41" style="cursor:pointer" (click)="sendMoney(home.name)">{{home.name}}</h4>
+                    <label class="lab1" style="cursor:pointer" (click)="sendMoney(home.name)">
+                   {{home.name}}
                     </label>
                 </div>
-                <div class="imageContainerList" style="background: url('assets/Group 3.png')  no-repeat;" > 
+                <!-- <div class="imageContainerList" style="background: url('assets/Group 3.png')  no-repeat;" > 
                     <h4 class="eh41" style="cursor:pointer" (click)="sendMoney()">W</h4>
                     <label class="lab1" style="cursor:pointer" (click)="sendMoney()">
                     Williams
@@ -127,7 +127,7 @@
                     <label class="lab1" style="cursor:pointer" (click)="sendMoney()">
                     Harper
                     </label>
-                </div>
+                </div> -->
                 
                
             </div>
