--- a/src/app/pages/public/register/register.page.html
+++ b/src/app/pages/public/register/register.page.html
@@ -39,12 +39,14 @@
         <input class="inputs1" type="text" id="registerInputConf2"  class="inputs1"/>
         <input class="inputs1" type="text" id="registerInputConf3" class="inputs1" />
         <input class="inputs1" type="text" id="registerInputConf4"  class="inputs1"/>
-        <p *ngIf="invalidOTP" style="color: red;text-align: -webkit-match-parent ;font-family: raleway_regular, Arial;"  >
+        <p *ngIf="invalidConfOTP" style="color: red;text-align: -webkit-match-parent ;font-family: raleway_regular, Arial;"  >
           <span id="registerInvalidOtpConf">Invalid OTP !</span>
         </p>
       </form>
       <p class="pincode"  id="registerConfPin">Confirm pincode</p>
-
+      <p *ngIf="otpMismatch" style="color: red;text-align: -webkit-match-parent ;font-family: raleway_regular, Arial;"  >
+        <span id="registerInvalidOtpConf">Pincode Mismatch !</span>
+      </p>
          <!-- for new password input
         <input type="text" name="newPass" class="form-control" placeholder="New pincode" autocomplete="off"  required [ngClass]="{'is-invalid': 
         newPass.invalid  && submitted  ,'is-valid': newPass.valid  && submitted }" #newPass="ngModel" ngModel [(ngModel)]="registrationObj.newPass" />
