--- a/src/app/pages/public/sendmoney/sendmoney.page.html
+++ b/src/app/pages/public/sendmoney/sendmoney.page.html
@@ -24,6 +24,7 @@
                 <img src="assets/Receiver Profile.png" (click)="receiver()">
                 <span class="receiver" (click)="receiver()">Receiver Info</span>
             </p>
+            <form #sendMoneyForm="ngForm" name="changepassword" novalidate>
             <div class="sendMoneyDiv" *ngIf="receiverInfo">
                  <table style="width:100%">
                         <tr class="trspace">
@@ -70,6 +71,8 @@
                                         <option value="bankaccount">Chiapas</option>
                                         <option value="ccdc">Colima</option>
                                     </select>
+                                    <show-error [control]="state" [label]="{'labelName': 'State'}"
+                                    [submitFlag]="submitted"></show-error>
                                 </td>
                             </tr>
                             <tr class="trspace">
@@ -86,6 +89,8 @@
                                         <option value="bankaccount">Calkimi</option>
                                         <option value="ccdc">Candelaria</option>
                                     </select>
+                                    <show-error [control]="city" [label]="{'labelName': 'City/Town'}"
+                                    [submitFlag]="submitted"></show-error>
                                 </td>
                             </tr>
                         <tr class="trspace">
@@ -101,6 +106,8 @@
                                     <option value="bankaccount">Money Gram</option>
                                     <option value="ccdc">Western Union</option>
                                 </select>
+                                <show-error [control]="vendor" [label]="{'labelName': 'Vendor'}"
+                                [submitFlag]="submitted"></show-error>
                             </td>
                         </tr>
                        
@@ -117,6 +124,8 @@
                                         <option value="bankaccount">Bank Account</option>
                                         <option value="cashPick">Cash Pickup</option>
                                     </select>
+                                    <show-error [control]="deliveryMethod" [label]="{'labelName': 'Delivery Method'}"
+                                    [submitFlag]="submitted"></show-error>
                                 </td>
                             </tr>
                         <tr class="trspace" *ngIf="sendMoney.deliveryMethod === 'cashPick'">
@@ -129,12 +138,14 @@
                             location.invalid  && submitted  ,'is-valid': location.valid  && submitted }"
                                     #location="ngModel" ngModel [(ngModel)]="sendMoney.location" style="text-indent: 10px;font-size: 15.00px;font-weight: 400;font-style: normal;font-family: raleway_regular, Arial;border-right:0.5px solid #3C3C3C;border-left:0.5px solid #3C3C3C;border-top:0.5px solid #3C3C3C;border-radius: 10px;width: 95%;height: calc(1.4em +0.75rem);border-bottom:0.5px solid #3C3C3C !important">
                                     <option hidden value="" disabled selected>Choose location </option>
-                                    <option value="bankaccount">Money Gram - Swansons </option>
+                                    <option value="swansons">Money Gram - Swansons </option>
                                     <option value="bankaccount" disabled>830 RIVER ST,ADAK,AK 99546.</option>
-                                    <option value="bankaccount">Money Gram - Walmart</option>
+                                    <option value="walmart">Money Gram - Walmart</option>
                                     <option value="bankaccount" disabled>2911 MILLBAY RD,KODIAK,AK 99615.2911 MILLBAY
                                         RD,KODIAK,AK 99615.</option>
                                 </select>
+                                <show-error [control]="location" [label]="{'labelName': 'Location'}"
+                                [submitFlag]="submitted"></show-error>
                             </td>
                         </tr>
                         <tr class="trspace" *ngIf="sendMoney.deliveryMethod === 'bankaccount'">
@@ -150,6 +161,8 @@
                                     <option value="bankaccount">Bank of America</option>
                                     <option value="ccdc">Wells Fargo</option>
                                 </select>
+                                <show-error [control]="bankName" [label]="{'labelName': 'Bank Name'}"
+                                [submitFlag]="submitted"></show-error>
                             </td>
                         </tr>
                         <tr class="trspace" *ngIf="sendMoney.deliveryMethod === 'bankaccount'">
@@ -161,7 +174,9 @@
                                     placeholder="" required [ngClass]="{'is-invalid': 
                             accountName.invalid  && submitted  ,'is-valid': accountName.valid  && submitted }"
                                     #accountName="ngModel" ngModel [(ngModel)]="sendMoney.accountName" style="text-indent: 10px;font-size: 15.00px;font-weight: 400;font-style: normal;font-family: raleway_regular, Arial;border-right:0.5px solid #3C3C3C;border-left:0.5px solid #3C3C3C;border-top:0.5px solid #3C3C3C;border-radius: 10px;width: 95%;height: calc(1.4em +0.75rem);border-bottom:0.5px solid #3C3C3C !important">
-                            </td>
+                                    <show-error [control]="accountName" [label]="{'labelName': 'Account Name'}"
+                                    [submitFlag]="submitted"></show-error>
+                                </td>
                         </tr>
                         <tr class="trspace" *ngIf="sendMoney.deliveryMethod === 'bankaccount'">
                             <td style="width:45%;padding-left: 10px;">
@@ -172,7 +187,9 @@
                                     placeholder="" required [ngClass]="{'is-invalid': 
                             accountNumber.invalid  && submitted  ,'is-valid': accountNumber.valid  && submitted }"
                                     #accountNumber="ngModel" ngModel [(ngModel)]="sendMoney.accountNumber" style="text-indent: 10px;font-size: 15.00px;font-weight: 400;font-style: normal;font-family: raleway_regular, Arial;border-right:0.5px solid #3C3C3C;border-left:0.5px solid #3C3C3C;border-top:0.5px solid #3C3C3C;border-radius: 10px;width: 95%;height: calc(1.4em +0.75rem);border-bottom:0.5px solid #3C3C3C !important">
-                            </td>
+                                    <show-error [control]="accountNumber" [label]="{'labelName': 'Account Number'}"
+                                    [submitFlag]="submitted"></show-error>
+                                </td>
                         </tr>
                         <tr class="trspace" *ngIf="sendMoney.deliveryMethod === 'bankaccount'">
                             <td style="width:45%;padding-left: 10px;">
@@ -183,7 +200,9 @@
                                     placeholder="" required [ngClass]="{'is-invalid': 
                             routingNumber.invalid  && submitted  ,'is-valid': routingNumber.valid  && submitted }"
                                     #routingNumber="ngModel" ngModel [(ngModel)]="sendMoney.routingNumber" style="text-indent: 10px;font-size: 15.00px;font-weight: 400;font-style: normal;font-family: raleway_regular, Arial;border-right:0.5px solid #3C3C3C;border-left:0.5px solid #3C3C3C;border-top:0.5px solid #3C3C3C;border-radius: 10px;width: 95%;height: calc(1.4em +0.75rem);border-bottom:0.5px solid #3C3C3C !important">
-                            </td>
+                                    <show-error [control]="routingNumber" [label]="{'labelName': 'Routing Number'}"
+                                    [submitFlag]="submitted"></show-error>
+                                </td>
                         </tr>
                         
                     </table> 
@@ -196,7 +215,7 @@
                                 </td>
                             </tr>
                         </table>
-                        <form #sendMoney="ngForm" name="changepassword" novalidate>
+                       
                             <div id="viewpg" class="sendMoneyDiv" *ngIf="firstPage">
                                 <table style="width:100%;padding-left: 18px;">
                                     <tr>
@@ -214,6 +233,10 @@
                                             <button class="sendmoneyBtn">&nbsp;<img src="assets/united-states-1.png" style="margin: -2px;">&nbsp;
                                                 <span class="usd">USD</span></button>
                                         </td>
+                                    </tr>
+                                    <tr>
+                                        <show-error [control]="payTo" [label]="{'labelName': 'You Send'}"
+                                        [submitFlag]="submitted"></show-error>
                                     </tr>
             
                                 </table>
@@ -253,14 +276,18 @@
             
                                     <tr class="filterSend">
                                         <td>
-                                            <input type="text" class="form-control" name="payTo" placeholder="" autocomplete="off"
+                                            <input type="text" class="form-control" name="receiverTo" placeholder="" autocomplete="off"
                                                 required [ngClass]="{'is-invalid': 
-                                                                                payTo.invalid  && submitted  ,'is-valid': payTo.valid  && submitted }"
-                                                #payTo="ngModel" ngModel [(ngModel)]="sendMoney.payTo" style="text-indent: 10px;font-size: 15.00px;font-weight: 400;font-style: normal;font-family: raleway_regular, Arial;border-right:0.5px solid #3C3C3C;border-left:0.5px solid #3C3C3C;border-top:0.5px solid #3C3C3C;
+                                                receiverTo.invalid  && submitted  ,'is-valid': receiverTo.valid  && submitted }"
+                                                #receiverTo="ngModel" ngModel [(ngModel)]="sendMoney.receiverTo" style="text-indent: 10px;font-size: 15.00px;font-weight: 400;font-style: normal;font-family: raleway_regular, Arial;border-right:0.5px solid #3C3C3C;border-left:0.5px solid #3C3C3C;border-top:0.5px solid #3C3C3C;
                                                                                         border-radius: 10px;width: 60%;height: calc(1.4em +0.75rem);border-bottom:0.5px solid #3C3C3C !important">
                                             <button class="sendmoneyBtn1">&nbsp;<img src="assets/mexico.png" style="margin: -2px;">&nbsp;
                                                 <span class="usd">MXN</span></button>
                                         </td>
+                                    </tr>
+                                    <tr>
+                                        <show-error [control]="receiverTo" [label]="{'labelName': 'Receives'}"
+                                        [submitFlag]="submitted"></show-error>
                                     </tr>
                                     <tr>
                                         <td>
@@ -269,12 +296,12 @@
                                     </tr>
                                 </table>
                                 <div style="text-align: center;margin-top: 10px;">
-                                <button  *ngIf="firstPage" class="nextbtn !important" style="width: 125.00px;height: 40.12px ;margin-bottom: 10px !important" (click)="onPreviewClick()">Preview</button>
+                                <button  *ngIf="firstPage" class="nextbtn !important" style="width: 125.00px;height: 40.12px ;margin-bottom: 10px !important" (click)="onPreviewClick(sendMoneyForm)">Preview</button>
                                 </div>
                             </div>
-                        </form>
+                        
             </div>
-           
+           </form>
         </div>
         <!-- <div class="columnHome"></div> -->
     </div>
