--- a/src/app/pages/public/forgotpassword/forgotpassword.page.html
+++ b/src/app/pages/public/forgotpassword/forgotpassword.page.html
@@ -19,7 +19,7 @@
         <!-- form starts -->
         <form #loginform="ngForm" name="loginform" novalidate>
           <!-- for phone number input -->
-          <input type="text" numbersOnly name="phone" class="form-control" placeholder="Phone Number" autocomplete="off" style="border-bottom: 1px solid #979797 !important" required
+          <input type="text" name="phone" class="form-control" placeholder="Phone Number" maxlength="15" pattern="[+][0-9]+" autocomplete="off" style="border-bottom: 1px solid #979797 !important" required
             [ngClass]="{
             'is-invalid':phone.invalid  && submitted  ,'is-valid': phone.valid  && submitted }" #phone="ngModel"
             ngModel [(ngModel)]="loginObj.phone" />
@@ -28,12 +28,12 @@
           <!-- for  Pincode input -->
           <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
           <form  class="digit-group" data-group-name="digits" data-autosubmit="false" autocomplete="off">
-            <input class="inputs" type="text"   class="inputs"/>
-            <input class="inputs" type="text"  class="inputs"/>
-            <input class="inputs" type="text"  class="inputs"/>
-            <input class="inputs" type="text"  class="inputs"/>
-            <input class="inputs" type="text" class="inputs" />
-            <input class="inputs" type="text"  class="inputs"/>
+            <input class="inputs" type="text" id="forgotInput1"  class="inputs" maxlength="1" autocomplete="off"/>
+            <input class="inputs" type="text" id="forgotInput2" class="inputs"  maxlength="1" autocomplete="off"/>
+            <input class="inputs" type="text" id="forgotInput3"  class="inputs" maxlength="1" autocomplete="off"/>
+            <input class="inputs" type="text" id="forgotInput4" class="inputs"  maxlength="1" autocomplete="off"/>
+            <input class="inputs" type="text" id="forgotInput5" class="inputs" maxlength="1" autocomplete="off"/>
+            <input class="inputs" type="text" id="forgotInput6" class="inputs" maxlength="1" autocomplete="off"/>
             <p *ngIf="invalidOTP" style="color: red;text-align: -webkit-match-parent ;font-family: raleway_regular, Arial;"  >
               <span>Invalid OTP !</span>
             </p>
