--- a/src/app/pages/public/login/login.page.html
+++ b/src/app/pages/public/login/login.page.html
@@ -25,19 +25,22 @@
         <!-- form starts -->
         <form #loginform="ngForm" name="loginform" novalidate>
           <!-- for phone number input -->
-          <input type="text"  id="loginPhone" name="phone" class="form-control" placeholder="Phone Number" autocomplete="off" style="border-bottom: 1px solid #979797 !important" required
+          <input type="text"  id="loginPhone" name="phone" class="form-control" maxlength="15" pattern="[+][0-9]+" placeholder="Phone Number" autocomplete="off" style="border-bottom: 1px solid #979797 !important" required
             [ngClass]="{
             'is-invalid':phone.invalid  && submitted  ,'is-valid': phone.valid  && submitted }" #phone="ngModel"
             ngModel [(ngModel)]="loginObj.phone" />
           <show-error [control]="phone" id="loginMobErr" [label]="{'labelName': 'Phone Number'}" [submitFlag]="submitted"></show-error>
           <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1" *ngIf="!submitted || phone.valid"></svg>
           <form  class="digit-group" data-group-name="digits" data-autosubmit="false" autocomplete="off">
-              <input class="inputs" type="text" id="loginInput1"   class="inputs"/>
-              <input class="inputs" type="text" id="loginInput2" class="inputs"/>
-              <input class="inputs" type="text" id="loginInput3" class="inputs" />
-              <input class="inputs" type="text" id="loginInput4"  class="inputs"/>
+              <input class="inputs" type="text" id="loginInput1"  class="inputs"  maxlength="1" autocomplete="off"/>
+              <input class="inputs" type="text" id="loginInput2" class="inputs"  maxlength="1" autocomplete="off"/>
+              <input class="inputs" type="text" id="loginInput3" class="inputs"  maxlength="1" autocomplete="off"/>
+              <input class="inputs" type="text" id="loginInput4"  class="inputs"  maxlength="1" autocomplete="off"/>
               <p *ngIf="invalidOTP" style="color: red;text-align: -webkit-match-parent ;font-family: raleway_regular, Arial;"  >
-                <span id="loginInvalidOtp">Invalid OTP !</span>
+                <span id="loginInvalidOtp">Invalid Pincode !</span>
+              </p>
+              <p *ngIf="invalidOTPPhone" style="color: red;text-align: -webkit-match-parent ;font-family: raleway_regular, Arial;"  >
+                <span id="invalidOTPPhoneID">Invalid Phone Number/Pincode !</span>
               </p>
             </form>
           
