--- a/src/app/pages/public/transactions/transactions.page.html
+++ b/src/app/pages/public/transactions/transactions.page.html
@@ -30,29 +30,39 @@
                 <button id="30day" class="day30" (click)="click30days()">&nbsp;30 Days</button>
             </p>
             <br>
-            <p class="otherSet" style="margin-top: 35px;background: gainsboro;">17th Dec 2019</p>
-            <div class="row" style="margin-top: 12px;">
-                <div style="width:12%">
-                    <div class="trans">
-                        <p class="rounded">fs</p>
+            <div *ngFor="let dt of homeArr">
+                    <p class="otherSet" style="margin-top: 35px;background: gainsboro;">{{getDate(dt.date)}}</p>
+            <div>
+            <div *ngFor="let val of dt.resultArr">
+               
+                <div class="row" style="margin-top: 12px;">
+                    <div style="width:12%">
+                        <div class="trans">
+                            <p class="rounded">{{getSplit(val.receiverName)}}</p>
+                        </div>
+                    </div>
+                    <div class="div2">
+                        <span class="span1">{{val.receiverName}}</span>
+                        <span class="span2">Reference Code: {{val.transactionReferenceCode}}</span>
+                    </div>
+                    <div style="width:8%">
+                        <img src="assets/us.png" alt="" align="middle" height="25" width="25" style="margin-right: 10px;">
+                    </div>
+                    <div style="margin-left: 10px;width:20%">
+                        <span class="amount">{{val.totalAmountSentToReceiver}}</span>
+                        <span class="amount2">{{val.transactionStatus}}</span>
+                    </div>
+                    <div style="width:5%">
+                        <img src="assets/rocket.png" alt="" align="middle" height="25" width="25" style="margin-right: 10px;">
                     </div>
                 </div>
-                <div class="div2">
-                    <span class="span1">GeeksforGeeks_1</span>
-                    <span class="span2">Reference Code: 564645646</span>
-                </div>
-                <div style="width:8%">
-                    <img src="assets/us.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
-                </div>
-                <div style="margin-left: 10px;width:20%">
-                    <span class="amount">$8564.00</span>
-                    <span class="amount2">Success</span>
-                </div>
-                <div style="width:5%">
-                    <img src="assets/rocket.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
-                </div>
+                <hr class="hr" style="border-color: gainsboro;margin-top: 12px;">
+
             </div>
-            <hr class="hr" style="border-color: gainsboro;margin-top: 12px;">
+            </div>
+                
+            
+<!--             
             <div class="row" style="margin-top: 12px;">
                 <div style="width:12%">
                     <div class="trans">
@@ -161,7 +171,7 @@
                 <div style="width:5%">
                     <img src="assets/rocket.png" alt="" align="middle"  height="25"  width="25" style="margin-right: 10px;">
                 </div>
-            </div>
+            </div> -->
         </div>
         <!-- <div class="columnHome"></div> -->
     </div>
